fix layout issues

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -20,6 +20,9 @@
           &:hover {
             color: #f1d956;
           }
+          &--active {
+            color: #f1d956;
+          }
         }
       }
     }
