--- a/src/pages/Entity/Entity.scss
+++ b/src/pages/Entity/Entity.scss
@@ -1,4 +1,4 @@
 .entity-container {
   background-color: #000;
-  height: 100vh;
+  height: 100%;
 }
